<resources>
    <string name="app_name">Mark</string>
    <string name="discover">发现</string>
    <string name="my_movie">我的电影</string>
    <string name="user">账号</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="classify_find">分类查找</string>
    <string name="daily_card">每日电影卡片</string>
    <string name="hot_movie">影院热映</string>

    <string name="articale">
        阿斯达所多奥数傀儡多耗了开始动画阿拉山口的哈伦裤收到啦开始动画拉斯科的哈时空裂
        痕大量开始懂了卡仕达可拉伸的脸孔请问我立刻去哦额米哦按时大大
        阿斯达所多
    </string>

</resources>
