<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="brandy.mark.MainActivity">

    <brandy.mark.custom.TopBar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"></brandy.mark.custom.TopBar>

    <FrameLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/main_radioGroup"
        android:layout_below="@+id/topbar">

    </FrameLayout>

    <RadioGroup
        android:id="@+id/main_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal">

        <!--
        设置给RadioGroup，使水波纹不会超出其边界
        android:background="?attr/selectableItemBackground"

        -->

        <RadioButton
            android:id="@+id/radio_btn_discover"
            style="@style/RadioBtn_style"
            android:drawableTop="@drawable/discover_selector"
            android:text="@string/discover"
            />

        <RadioButton
            android:id="@+id/radio_btn_my_movie"
            style="@style/RadioBtn_style"
            android:drawableTop="@drawable/my_movie_selector"
            android:text="@string/my_movie"
            />

        <RadioButton
            android:id="@+id/radio_btn_user"
            style="@style/RadioBtn_style"
            android:drawableTop="@drawable/user_selector"
            android:text="@string/user"
            />

    </RadioGroup>

</RelativeLayout>
